# near-momentum-bot

./: .env.example  .gitignore  DEPLOY.md  LICENSE  README.md  config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: STRATEGY.md  engine.js  index.html  simulator.html
experiments/: README.md  make_fixtures.py  parity_check.js  sweep.py
scripts/: download_data.py  simulate_90d.py
src/near_bot/: __init__.py  __main__.py  backtest.py  broker.py  cli.py  config.py  data.py  dump_client.py  executor.py  indicators.py  report.py  score.py  walkforward.py
tests/: conftest.py  test_backtest.py  test_data.py  test_indicators.py  test_score.py  test_walkforward.py
